Decouple from ardoco core pom